Co-authored-by: Gabriel Lucas <Gabz047@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 </head>
 
 <body>
-<div class="containter">
-   <header class="row "></header>
+<header class="cabecalho">
+   
+   </header>
 </div>
-
 </html>
