--- a/index.html
+++ b/index.html
@@ -1,20 +1,44 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <style>
-
-    </style>
+    <link rel="stylesheet" href="style.css">
+    <script src="js.js"></script>
 </head>
-
 <body>
-<header class="cabecalho">
-   
-   </header>
-</div>
+    <header class="cabecalho">
+        <img src="img/download-removebg-preview.png" alt="oda logo" id="logo">
+        <nav class="navbar">
+            <input type="search" name="" id="search-bar" placeholder="pesquise algo aqui...">
+            <li><a href="#">home</a></li>
+            <li><a href="#">treinos</a></li>
+            <li><a href="#">noticias</a></li>
+            <li><a href="#">galeria</a></li>
+            <li><a href="#">sobre</a></li>
+            <div class="registro">
+                <button><a href="login">login</a></button>
+            </div>
+        </nav>
+        <div class="menu-hamburguer" onclick="open()">
+           <div></div>
+           <div></div>
+           <div></div>
+        </div>
+    </header>
+    <main class="container">
+        <div class="container-main">
+            <div class="carrossel">
+
+            </div>
+            <section>
+
+            </section>
+        </div>
+    </main>
+    <footer class="rodape">
+        <p>Todos os direitos reservados &copy;</p>
+    </footer>
+</body>
 </html>
