--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="js.js"></script>
 </head>
+
 <body>
     <header class="cabecalho">
         <img src="img/download-removebg-preview.png" alt="oda logo" id="logo">
@@ -21,10 +23,8 @@
                 <button><a href="login">login</a></button>
             </div>
         </nav>
-        <div class="menu-hamburguer" onclick="open()">
-           <div></div>
-           <div></div>
-           <div></div>
+        <div class="menu-hamburguer">
+            <img src="img/cardapio.png" id="menu-resp">
         </div>
     </header>
     <main class="container">
@@ -32,8 +32,17 @@
             <div class="carrossel">
 
             </div>
-            <section>
-
+            <h1>VENHA TREINAR NA ODA CONFIRA NOSSOS PLANOS:</h1>
+            <section class="pagamentos">
+                <div class='tipo-pagamento'>
+                    <p>Plano <b>ruim</b></p>
+                </div>
+                <div class='tipo-pagamento'>
+                    <p>Plano <b>médio</b></p>
+                </div>
+                <div class='tipo-pagamento'>
+                    <p>Plano <b>mais vantajoso</b></p>
+                </div>
             </section>
         </div>
     </main>
@@ -41,4 +50,5 @@
         <p>Todos os direitos reservados &copy;</p>
     </footer>
 </body>
+
 </html>
