--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
     <script src="js.js"></script>
 </head>
 
 <body>
     <header class="cabecalho">
-        <img src="img/download-removebg-preview.png" alt="oda logo" id="logo">
+        <img src="img/Logo-Uplay-Branca.png" alt="oda logo" id="logo">
         <nav class="navbar">
             <input type="search" name="" id="search-bar" placeholder="pesquise algo aqui...">
             <li><a href="#">home</a></li>
@@ -28,11 +29,30 @@
         </div>
     </header>
     <main class="container">
-        <div class="container-main">
-            <div class="carrossel">
+        <div class="carrossel">
+            <div class="item-carrossel">
+                <img src="img/academia.jpg" alt="academia">
+                <div id="txt-box">
+                    <p>Uplay</p>
+                    <box-icon name='current-location'></box-icon>
+                    <p> Joinville - Bucarein</p>
+                </div>
+            </div>
+            <div class="item-carrossel">
 
             </div>
-            <h1>VENHA TREINAR NA ODA CONFIRA NOSSOS PLANOS:</h1>
+            <div class="item-carrossel"> 
+
+            </div>
+            <div class="item-carrossel"> 
+
+            </div>
+            <div class="item-carrossel">
+
+            </div>
+        </div>
+        <div class="container-main">
+            <h1>VENHA TREINAR NA Uplay CONFIRA NOSSOS PLANOS:</h1>
             <section class="pagamentos">
                 <div class='tipo-pagamento'>
                     <p>Plano <b>ruim</b></p>
