--- a/index.html
+++ b/index.html
@@ -32,38 +32,66 @@
         <div class="carrossel">
             <div class="item-carrossel">
                 <img src="img/academia.jpg" alt="academia">
-                <div id="txt-box">
-                    <p>Uplay</p>
-                    <box-icon name='current-location'></box-icon>
-                    <p> Joinville - Bucarein</p>
-                </div>
+                <p>confira a nossa academia</p>
             </div>
             <div class="item-carrossel">
-
-            </div>
-            <div class="item-carrossel"> 
-
-            </div>
-            <div class="item-carrossel"> 
-
+                <img src="img/academiauplay.png" alt="" srcset="">
+                <p>venha para a Uplay</p>
             </div>
             <div class="item-carrossel">
-
+                <img src="img/avaliação.jpg" alt="" srcset="">
+                <p>faça uma avaliação fisica</p>
+            </div>
+            <div class="item-carrossel">
+                <img src="img/personal.jpg" alt="" srcset="">
+                <p>nossos melhores personais estão aqui</p>
+            </div>
+            <div class="item-carrossel">
+                <img src="img/dança.jpg" alt="">
+                <p>zumba todos os dias</p>
             </div>
         </div>
-        <div class="container-main">
+        <div class="localizacao">
+            <p>Uplay</p>
+            <box-icon name='current-location'></box-icon>
+            <p> Joinville - Bucarein</p>
+        </div>
+        <div class="container-pagamentos">
             <h1>VENHA TREINAR NA Uplay CONFIRA NOSSOS PLANOS:</h1>
+
             <section class="pagamentos">
-                <div class='tipo-pagamento'>
-                    <p>Plano <b>ruim</b></p>
-                </div>
-                <div class='tipo-pagamento'>
-                    <p>Plano <b>médio</b></p>
-                </div>
-                <div class='tipo-pagamento'>
-                    <p>Plano <b>mais vantajoso</b></p>
-                </div>
-            </section>
+                <img src="img/homem forte.jpg" alt="" srcset="">
+                <div class="matricula">
+                    <div class='recorrente'>
+                        <h1>Recorrente</h1>
+                        <h2>R$ 139,90 / mês </h2>
+                        <ul>
+                            <li>Sem enrolação</li>
+                            <li>sem dor de cabeça</li>
+                            <li>Sem fila pra treina</li>
+                            <li>sem desculpas</li>
+                        </ul>
+                        <div class="botao-recorrente">
+                            <button>quero me matricular</button>
+                        </div>
+                    </div>
+                    <div class='anual'>
+                        <h1>Anual</h1>
+                        <h2>R$ 109,90 / mês </h2>
+                        <ul>
+                            <li>35% de desconto</li>
+                            <li>Sem enrolação</li>
+                            <li>sem dor de cabeça</li>
+                            <li>Sem fila pra treina</li>
+                            <li>sem desculpas</li>
+                        </ul>
+                        <div class="botao-anual">
+                            <button>quero me matricular</button>
+                        </div>
+                    </div>
+                </div>  
+            </div>
+        </section>
         </div>
     </main>
     <footer class="rodape">
