menu hamburguer feito

--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
 </head>
 
 <body>
+    <!--cabeçalho-->
     <header class="cabecalho">
         <img src="img/Logo-Uplay-Branca.png" alt="oda logo" id="logo">
+        <!-- menu de navegação -->
         <nav class="navbar">
             <input type="search" name="" id="search-bar" placeholder="pesquise algo aqui...">
             <li><a href="#">home</a></li>
@@ -25,11 +27,25 @@
                 <button><a href="login">login</a></button>
             </div>
         </nav>
-        <div class="menu-hamburguer">
-            <img src="img/cardapio.png" id="menu-resp">
+        <div class="menu-resp">
+            <span></span>
+            <span></span>
+            <span></span>
+            <div class="menu-hamburguer">
+                <input type="search" name="" id="search-bar" placeholder="pesquise algo aqui...">
+                <li><a href="#">home</a></li>
+                <li><a href="#">treinos</a></li>
+                <li><a href="#">noticias</a></li>
+                <li><a href="#">galeria</a></li>
+                <li><a href="#">sobre</a></li>
+            </div>
         </div>
+        <!--fim do menu de navegação-->
     </header>
+    <!--fim do cabeçalho-->
+    <!-- conteudo principal-->
     <main class="container">
+        <!--carrossel-->
         <div class="carrossel">
             <div class="item-carrossel">
                 <img src="img/academia.jpg" alt="academia">
@@ -52,14 +68,16 @@
                 <p>zumba todos os dias</p>
             </div>
         </div>
+        <!--localização-->
         <div class="localizacao">
             <p>Uplay</p>
             <box-icon name='current-location'></box-icon>
             <p> Joinville - Bucarein</p>
         </div>
+        <!--container de pagamentos-->
         <div class="container-pagamentos">
             <h1>VENHA TREINAR NA Uplay CONFIRA NOSSOS PLANOS:</h1>
-
+            <!--sessão de pagamentos -->
             <section class="pagamentos">
                 <img src="img/homem forte.jpg" alt="" srcset="">
                 <div class="matricula">
@@ -94,6 +112,7 @@
         </div>
         </section>
         </div>
+        <!--sessão de treinos-->
         <section id="treinos-section">
             <div id="overlay">
                 <h2 id="h2Treinos">Treinos</h2>
@@ -126,6 +145,9 @@
                 </div>
             </div>
         </section>
+        <!-- fim de sessão de treinos-->
+
+        <!-- inicio da sessão app-->
         <section id="App-section">
             <h2>Ainda não possui o App?</h2>
             <div id="desc-app">
@@ -160,53 +182,60 @@
                 </a>
             </div>
         </section>
+    <!--fim da sessão de app -->
+    <!--inicio da sessão sobre-->
         <section id="academiaAbout-section">
             <div id="overlay3">
                 <h3>Sobre a academia</h3>
                 <div id="container-infos">
-                <div class="boxes-gym">
-                    <div class="box-gym g1">
-                        <div class="info-box">
-                            <p>Aparelhos modernos</p>
-                            <i class='bx bx-dumbbell'></i>
-                        </div>
-                        <div class="info-box">
-                            <p>Ambiente climatizado</p>
-                            <i class='bx bx-wind'></i>
-                        </div>
-                    </div>
-                </div>
-                <div class="boxes-gym">
-                    <div class="box-gym g2">
-                        <div class="info-box">
-                            <p>Estacionamento Grátis</p>
-                            <i class='bx bxs-parking' ></i>
-                        </div>
-                        <div class="info-box">
-                            <p>Equipe profissional</p>
-                            <i class='bx bxs-group'></i>
+                    <div class="boxes-gym">
+                        <div class="box-gym g1">
+                            <div class="info-box">
+                                <p>Aparelhos modernos</p>
+                                <i class='bx bx-dumbbell'></i>
+                            </div>
+                            <div class="info-box">
+                                <p>Ambiente climatizado</p>
+                                <i class='bx bx-wind'></i>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="boxes-gym">
-                    <div class="box-gym g3">
-                        <div class="info-box">
-                            <p>Atividades extras</p>
-                            <i class='bx bx-run'></i>
+                    <div class="boxes-gym">
+                        <div class="box-gym g2">
+                            <div class="info-box">
+                                <p>Estacionamento Grátis</p>
+                                <i class='bx bxs-parking'></i>
+                            </div>
+                            <div class="info-box">
+                                <p>Equipe profissional</p>
+                                <i class='bx bxs-group'></i>
+                            </div>
                         </div>
-                        <div class="info-box">
-                            <p>Wi-fi Grátis</p>
-                            <i class='bx bx-wifi'></i>
+                    </div>
+                    <div class="boxes-gym">
+                        <div class="box-gym g3">
+                            <div class="info-box">
+                                <p>Atividades extras</p>
+                                <i class='bx bx-run'></i>
+                            </div>
+                            <div class="info-box">
+                                <p>Wi-fi Grátis</p>
+                                <i class='bx bx-wifi'></i>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
         </section>
+    <!--fim da sessão app-->
     </main>
+<!--fim do conteudo principal-->
+<!--rodape-->
     <footer class="rodape">
         <p>Todos os direitos reservados &copy;</p>
     </footer>
-    <!--NOIS MANCO-->
+<!--fim do rodapé-->
+ <!--NOIS MANCO-->
 </body>
+
 </html>
