--- a/index.html
+++ b/index.html
@@ -115,33 +115,37 @@
         <!--sessão de treinos-->
         <section id="treinos-section">
             <div id="overlay">
-                <h2 id="h2Treinos">Treinos</h2>
-                <div id="p1-container">
-                    <p id="treinosP1">Conte com a ajuda de nossos profissionais para montar seu treino</p>
-                </div>
-                <div id="p2-container">
-                    <p id="treinosP2">Monte seu treino diretamente no site</p>
-                    <a href="#" id="externalA"><i class='bx bx-link-external' id="external"></i></a>
-                </div>
-                <div id="beneficios-treino">
-                    <ul>
-                        <li>
-                            <i class='bx bx-check'></i>
-                            <p>Suporte online</p>
-                        </li>
-                        <li>
-                            <i class='bx bx-check'></i>
-                            <p>Fichas de treino de qualidade</p>
-                        </li>
-                        <li>
-                            <i class='bx bx-check'></i>
-                            <p>Sem enrolação</p>
-                        </li>
-                        <li>
-                            <i class='bx bx-check'></i>
-                            <p>Acompanhado de profissionais</p>
-                        </li>
-                    </ul>
+                <div id="container-treinosFlex">
+                    <div id="desc-treino">
+                        <h2 id="h2Treinos">Treinos</h2>
+                        <div id="p1-container">
+                            <p id="treinosP1">Conte com a ajuda de nossos profissionais para montar seu treino</p>
+                        </div>
+                        <div id="p2-container">
+                            <p id="treinosP2">Monte seu treino diretamente no site</p>
+                            <a href="#" id="externalA"><i class='bx bx-link-external' id="external"></i></a>
+                        </div>
+                    </div>
+                    <div id="beneficios-treino">
+                        <ul>
+                            <li>
+                                <i class='bx bx-check'></i>
+                                <p>Suporte online</p>
+                            </li>
+                            <li>
+                                <i class='bx bx-check'></i>
+                                <p>Fichas de treino de qualidade</p>
+                            </li>
+                            <li>
+                                <i class='bx bx-check'></i>
+                                <p>Sem enrolação</p>
+                            </li>
+                            <li>
+                                <i class='bx bx-check'></i>
+                                <p>Acompanhado de profissionais</p>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </section>
@@ -150,27 +154,32 @@
         <!-- inicio da sessão app-->
         <section id="App-section">
             <h2>Ainda não possui o App?</h2>
-            <div id="desc-app">
-                <h3>Baixe agora!</h3>
-                <p>Acesse sua ficha de treino e confira os horários das atividades</p>
+            <div id="flex-app">
+                <div id="desc-app">
+                    <h3>Baixe agora!</h3>
+                    <p>Acesse sua ficha de treino e confira os horários das atividades</p>
+                </div>
+                <div id="botoes-flex">
+                <div id="botoes-download">
+                    <div id="play-btn">
+                        <button>
+                            <p>Play store</p>
+                            <i class='bx bxl-play-store'></i>
+                        </button>
+                    </div>
+                    <div id="apple-btn">
+                        <button>
+                            <p>Apple store</p>
+                            <i class='bx bxl-apple'></i>
+                        </button>
+                    </div>
+                </div>
             </div>
-            <div id="botoes-download">
-                <div id="play-btn">
-                    <button>
-                        <p>Play store</p>
-                        <i class='bx bxl-play-store'></i>
-                    </button>
-                </div>
-                <div id="apple-btn">
-                    <button>
-                        <p>Apple store</p>
-                        <i class='bx bxl-apple'></i>
-                    </button>
-                </div>
             </div>
         </section>
         <section id="musica-section">
             <h2>TREINE COM NOSSA PLAYLIST</h2>
+            <div id="flex-musica">
             <div id="box-spotify">
                 <h3>Disponível agora no spotify!</h3>
                 <i class='bx bxl-spotify'></i>
@@ -181,9 +190,10 @@
                     <div id="overlay2"></div>
                 </a>
             </div>
+        </div>
         </section>
-    <!--fim da sessão de app -->
-    <!--inicio da sessão sobre-->
+        <!--fim da sessão de app -->
+        <!--inicio da sessão sobre-->
         <section id="academiaAbout-section">
             <div id="overlay3">
                 <h3>Sobre a academia</h3>
@@ -227,15 +237,15 @@
                 </div>
             </div>
         </section>
-    <!--fim da sessão app-->
+        <!--fim da sessão app-->
     </main>
-<!--fim do conteudo principal-->
-<!--rodape-->
+    <!--fim do conteudo principal-->
+    <!--rodape-->
     <footer class="rodape">
         <p>Todos os direitos reservados &copy;</p>
     </footer>
-<!--fim do rodapé-->
- <!--NOIS MANCO-->
+    <!--fim do rodapé-->
+    <!--NOIS MANCO-->
 </body>
 
 </html>
